Fix scrollable list height overlap When adding a new task, user could not see the item on the list due to overlap

--- a/imports/ui/pages/ListPage.less
+++ b/imports/ui/pages/ListPage.less
@@ -3,6 +3,6 @@
 .page.lists-show {
   .content-scrollable {
     background: @color-empty;
-    top: 5em !important;
+    top: 7em !important;
   }
 }
